--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,10 @@ fuzzer:
     script: "angr-test fuzzer"
     tags: [angr]
 
+driller:
+  script: "angr-test driller"
+  tags: [angr]
+
 lint:
     script: "angr-test lint"
     tags: [angr]
