Trigger image builds on push

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 before_script:
-    - angr-test sync hard
+    - which angr-test && angr-test sync hard
 
 fuzzer:
     script: "angr-test fuzzer"
@@ -12,3 +12,10 @@ driller:
 lint:
     script: "angr-test lint"
     tags: [angr]
+
+build_images:
+    only: ["master"]
+    stage: deploy
+    script:
+    - cgc-build worker
+    tags: ["docker-builder"]
